// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`localizeRoutes > Route options resolver: routing disable > should be disabled routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > basic > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > basic > should be localized routing 2`] = `
[
  {
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 1`] = `
[
  {
    "children": [
      {
        "locale": "en",
        "name": "user-profile___en",
        "path": "profile",
      },
      {
        "locale": "en",
        "name": "user-posts___en",
        "path": "posts",
      },
    ],
    "locale": "en",
    "name": "user___en",
    "path": "/en/user/:id",
  },
  {
    "children": [
      {
        "locale": "ja",
        "name": "user-profile___ja",
        "path": "profile",
      },
      {
        "locale": "ja",
        "name": "user-posts___ja",
        "path": "posts",
      },
    ],
    "locale": "ja",
    "name": "user___ja",
    "path": "/ja/user/:id",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 2`] = `
[
  {
    "children": [
      {
        "locale": "en",
        "name": "user-profile___en",
        "path": "profile",
      },
      {
        "locale": "en",
        "name": "user-posts___en",
        "path": "posts",
      },
    ],
    "locale": "en",
    "name": "user___en",
    "path": "/en/user/:id",
  },
  {
    "children": [
      {
        "locale": "ja",
        "name": "user-profile___ja",
        "path": "profile",
      },
      {
        "locale": "ja",
        "name": "user-posts___ja",
        "path": "posts",
      },
    ],
    "locale": "ja",
    "name": "user___ja",
    "path": "/ja/user/:id",
  },
]
`;

exports[`localizeRoutes > route name separator > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home__en",
    "path": "/en",
  },
  {
    "locale": "ja",
    "name": "home__ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about__en",
    "path": "/en/about",
  },
  {
    "locale": "ja",
    "name": "about__ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > route name separator > should be localized routing 2`] = `
[
  {
    "locale": "en",
    "name": "home__en",
    "path": "/en",
  },
  {
    "locale": "ja",
    "name": "home__ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about__en",
    "path": "/en/about",
  },
  {
    "locale": "ja",
    "name": "about__ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > strategy: "no_prefix" > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix" > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home",
    "path": "/",
  },
  {
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about",
    "path": "/about",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_and_default" > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home___en___default",
    "path": "/",
  },
  {
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about___en___default",
    "path": "/about",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
  {
    "children": [
      {
        "locale": "en",
        "name": "user-profile___en___default",
        "path": "profile",
      },
      {
        "locale": "en",
        "name": "user-posts___en___default",
        "path": "posts",
      },
    ],
    "locale": "en",
    "name": "user___en___default",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "locale": "en",
        "name": "user-profile___en",
        "path": "profile",
      },
      {
        "locale": "en",
        "name": "user-posts___en",
        "path": "posts",
      },
    ],
    "locale": "en",
    "name": "user___en",
    "path": "/en/user/:id",
  },
  {
    "children": [
      {
        "locale": "ja",
        "name": "user-profile___ja",
        "path": "profile",
      },
      {
        "locale": "ja",
        "name": "user-posts___ja",
        "path": "posts",
      },
    ],
    "locale": "ja",
    "name": "user___ja",
    "path": "/ja/user/:id",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_except_default" > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home___en",
    "path": "/",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/about",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home___en",
    "path": "/en/",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja/",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/en/about/",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about/",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 2`] = `
[
  {
    "locale": "en",
    "name": "home___en",
    "path": "/en/",
  },
  {
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja/",
  },
  {
    "locale": "en",
    "name": "about___en",
    "path": "/en/about/",
  },
  {
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about/",
  },
]
`;
